Making FLUSH TABLES WITH READ LOCK block COMMITs of existing transactions, in a deadlock-free manner. This splits locking the global read lock in two steps. This fixes a consequence of this bug, known as: BUG#4953 'mysqldump --master-data may report incorrect binlog position if using InnoDB' And a test.